Fix Feature TDI-26891 : modify the properities file https://jira.talendforge.org/browse/TDI-26891
git-svn-id: http://talendforge.org/svn/tos/trunk@105807 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -65,7 +65,7 @@ DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
-HBASE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
+HBASE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (HBase 0.90.1)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
