--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -32,7 +32,7 @@ DB_VERSION.ITEM.MAPR212=MapR 2.1.2
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
-DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
+DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
