--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -20,7 +20,7 @@ DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 PIG_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
-PIG_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
+PIG_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
 PIG_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 PIG_VERSION.ITEM.MAPR1=MapR 1.2.0
