Fix Feature TDI-26024 : Pig components should support sequence files https://jira.talendforge.org/browse/TDI-26024
git-svn-id: http://talendforge.org/svn/tos/trunk@105964 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -49,6 +49,7 @@ LOAD.ITEM.BINSTORAGE=BinStorage
 LOAD.ITEM.TEXTLOADER=TextLoader
 LOAD.ITEM.HCATLOADER=HCatLoader
 LOAD.ITEM.HBASESTORAGE=HBaseStorage
+LOAD.ITEM.SEQUENCEFILELOADER=SequenceFileLoader
 LOAD.ITEM.CUSTOM=Custom
 
 CUSTOM_LOADER.NAME=
@@ -113,3 +114,8 @@ HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LTE=lte
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CACHING=caching
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=limit
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
+
+KEYCOLUMN.NAME=Key Column
+VALUECOLUMN.NAME=Value Column
+SEQUENCE_CONFIGURATION.NAME = Sequence Loader Configuration
+
