--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -13,6 +13,7 @@ STORE.ITEM.BINSTORAGE=BinStorage
 STORE.ITEM.PIGDUMP=PigDump
 STORE.ITEM.HCATSTORER=HCatStorer
 STORE.ITEM.HBASESTORAGE=HBaseStorage
+STORE.ITEM.SEQUENCEFILESTORAGE=SequenceFileStorage
 STORE.ITEM.CUSTOM=Custom
 
 CUSTOM_STORER.NAME=
@@ -85,3 +86,7 @@ CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
 
 HBASE_CONFIGURATION.NAME=Hbase Configuration
+
+KEYCOLUMN.NAME=Key Column
+VALUECOLUMN.NAME=Value Column
+SEQUENCE_CONFIGURATION.NAME = Sequence Storage Configuration
