Fix Feature TDI-26972 : Create the tHiveLoad https://jira.talendforge.org/browse/TDI-26972
git-svn-id: http://talendforge.org/svn/tos/trunk@106258 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -1,7 +1,7 @@
 #Created by JInto - www.guh-software.de
 #Fri Mar 14 22:58:43 CST 2008
-HELP=org.talend.help.tHiveCreateTable
-LONG_NAME=create hive table
+HELP=org.talend.help.tHiveLoad
+LONG_NAME=load data to hive table or directory
 
 PROPERTY.NAME=Property Type
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
@@ -15,6 +15,8 @@ SCHEMA.NAME=Schema
 SCHEMA_DB.NAME=Schema
 TABLE.NAME=Table Name
 DBTABLE.NAME=Table Name
+
+QUERY.NAME=Query
 
 VERSION.NAME=Version
 
@@ -64,63 +66,24 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 CONN.NAME=Connection
 HADOOP_PROPS.NAME=Hadoop properties
 
-TABLEACTION.NAME=Action on table
+LOAD_ACTION.NAME=Load action
+LOAD_ACTION.ITEM.LOAD=LOAD
+LOAD_ACTION.ITEM.INSERT=INSERT
 
-TABLEACTION.ITEM.CREATE_TABLE=Create table
-TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=Create table if not exists
+TARGET.NAME=Target type
+TARGET.ITEM.TABLE=TABLE
+TARGET.ITEM.DIRECTORY=DIRECTORY
 
-SET_FILE_LOCATION.NAME=Set file location
-FILE_LOCATION.NAME=
+FILEPATH.NAME=File Path
+
+FILE_ACTION.NAME=Target type
+FILE_ACTION.ITEM.OVERWRITE=OVERWRITE
+FILE_ACTION.ITEM.APPEND=APPEND
+
+LOCAL.NAME=Local
 
 SET_PARTITIONS.NAME=Set partitions
-STORAGE_FORMAT.NAME=Format
-STORAGE_FORMAT.ITEM.RCFILE=RCFILE
-STORAGE_FORMAT.ITEM.SEQUENCEFILE=SEQUENCEFILE
-STORAGE_FORMAT.ITEM.TEXTFILE=TEXTFILE
-STORAGE_FORMAT.ITEM.ORC=ORCFILE
-STORAGE_FORMAT.ITEM.INPUTFORMAT_AND_OUTPUTFORMAT=INPUTFORMAT and OUTPUTFORMAT
-STORAGE_FORMAT.ITEM.STORAGE=STORAGE
+PARTITION.NAME=
+CREATE_IF_NOT_EXIST.NAME=Create partition if not exist
 
-CREATE_EXTERNAL.NAME=Create an external table
-
-SET_ROW_FORMAT.NAME=Set delimited row format
-FIELD_TERMINATED_BY.NAME=
-COLLECTION_ITEM_TERMINATED_BY.NAME=
-MAP_KEY_TERMINATED_BY.NAME=
-LINES_TERMINATED_BY.NAME=
-FIELD_ESCAPE_BY.NAME=
-
-SET_FIELD_TERMINATED_BY.NAME=Field
-SET_COLLECTION_ITEM_TERMINATED_BY.NAME=Collection Item
-SET_MAP_KEY_TERMINATED_BY.NAME=Map Key
-SET_LINES_TERMINATED_BY.NAME=Line
-SET_FIELD_ESCAPE_BY.NAME=Escape
-
-SET_SERDE_ROW_FORMAT.NAME=Set serde row format
-SERDE_NAME.NAME=Serde class name
-SERDE_PROPERTIES.NAME=Serde Properties 
-SERDE_PROPERTIES.ITEM.PROPERTY=Property
-SERDE_PROPERTIES.ITEM.VALUE=Value
-
-TABLE_COMMENT.NAME=Table comment
-
-SET_CLUSTERED_BY_AND_SKEWED_BY.NAME=Set clusteded_by or skewed_by statement
-CLUSTERED_BY_AND_SKEWED_BY.NAME=
-
-STORAGE_CLASS.NAME=Storage class
-INPUTFORMAT_CLASS.NAME=Inputformat class
-OUTPUTFORMAT_CLASS.NAME=Outputformat class
-
-TABLE_PROPERTIES.NAME=Table properties 
-TABLE_PROPERTIES.ITEM.PROPERTY=Property
-TABLE_PROPERTIES.ITEM.VALUE=Value
-
-AS_SELECT.NAME=As select
-SELECT.NAME=
-LIKE_TABLE.NAME=Like table
-LIKE_TABLE_NAME.NAME=
-
-ROW_FORMAT_GROUP.NAME=Row format
-
-CREATE_TABLE_GROUP.NAME=Create Table
-ADVANCED_CREATE_TABLE_GROUP.NAME=Advanced Create Table
+LOAD_DATA_GROUP.NAME=Load Data
