Fix Feature TDI-26973 : Add the RCFilePigStorage in the tPigLoad and the tPigStoreResult https://jira.talendforge.org/browse/TDI-26973
git-svn-id: http://talendforge.org/svn/tos/trunk@106294 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -50,6 +50,7 @@ LOAD.ITEM.TEXTLOADER=TextLoader
 LOAD.ITEM.HCATLOADER=HCatLoader
 LOAD.ITEM.HBASESTORAGE=HBaseStorage
 LOAD.ITEM.SEQUENCEFILELOADER=SequenceFileLoader
+LOAD.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
 LOAD.ITEM.CUSTOM=Custom
 
 CUSTOM_LOADER.NAME=
