--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -14,6 +14,7 @@ STORE.ITEM.PIGDUMP=PigDump
 STORE.ITEM.HCATSTORER=HCatStorer
 STORE.ITEM.HBASESTORAGE=HBaseStorage
 STORE.ITEM.SEQUENCEFILESTORAGE=SequenceFileStorage
+STORE.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
 STORE.ITEM.CUSTOM=Custom
 
 CUSTOM_STORER.NAME=
