Fix Feature TDI-26976 : Add the AvroStorage in the tPigLoad and the tPigStoreResult https://jira.talendforge.org/browse/TDI-26976
git-svn-id: http://talendforge.org/svn/tos/trunk@106507 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -51,6 +51,7 @@ LOAD.ITEM.HCATLOADER=HCatLoader
 LOAD.ITEM.HBASESTORAGE=HBaseStorage
 LOAD.ITEM.SEQUENCEFILELOADER=SequenceFileLoader
 LOAD.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
+LOAD.ITEM.AVROSTORAGE=AvroStorage
 LOAD.ITEM.CUSTOM=Custom
 
 CUSTOM_LOADER.NAME=
