--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -15,6 +15,7 @@ STORE.ITEM.HCATSTORER=HCatStorer
 STORE.ITEM.HBASESTORAGE=HBaseStorage
 STORE.ITEM.SEQUENCEFILESTORAGE=SequenceFileStorage
 STORE.ITEM.RCFILEPIGSTORAGE=RCFilePigStorage
+STORE.ITEM.AVROSTORAGE=AvroStorage
 STORE.ITEM.CUSTOM=Custom
 
 CUSTOM_STORER.NAME=
