--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -78,6 +78,7 @@ STORAGE_FORMAT.ITEM.RCFILE=RCFILE
 STORAGE_FORMAT.ITEM.SEQUENCEFILE=SEQUENCEFILE
 STORAGE_FORMAT.ITEM.TEXTFILE=TEXTFILE
 STORAGE_FORMAT.ITEM.ORC=ORCFILE
+STORAGE_FORMAT.ITEM.AVRO=AVRO
 STORAGE_FORMAT.ITEM.INPUTFORMAT_AND_OUTPUTFORMAT=INPUTFORMAT and OUTPUTFORMAT
 STORAGE_FORMAT.ITEM.STORAGE=STORAGE
 
