git-svn-id: http://talendforge.org/svn/tos/trunk@106949 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -1,6 +1,6 @@
-HELP=org.talend.help.tSqoopImport
-LONG_NAME=Imports an individual table from an RDBMS to HDFS
-EXTERNAL.NAME=Sqoop Import
+HELP=org.talend.help.tSqoopMerge
+LONG_NAME=It allows you to combine two datasets where entries in one dataset should overwrite entries of an older dataset
+EXTERNAL.NAME=Sqoop Merge
 TEMPFILE.NAME=Temp data directory path
 
 CLASSNAME.NAME=Class Name
