TUP-758: add import function for DI.
git-svn-id: http://talendforge.org/svn/tos/trunk@107067 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -128,4 +128,15 @@
             name="%NavigatorContent.action.openPigudfExistVersionProcess">
       </Action>
    </extension>
+   <extension
+         point="org.talend.repository.items.importexport.handler">
+      <importProvider
+            class="org.talend.repository.pigudf.handler.PigUdfImportHandler"
+            id="org.talend.repository.pigudf.importProvider"
+            name="Pig UDF importer"
+            priority="NORMAL">
+         <repType
+               type="PIG_UDF"></repType>
+      </importProvider>
+   </extension>
 </plugin>
