TUP-979: enable import hadoop clusters.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@107088 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -219,4 +219,15 @@
              name="Metadata/Create HBase">
        </Action>
     </extension>
+    <extension
+          point="org.talend.repository.items.importexport.handler">
+       <importProvider
+             class="org.talend.repository.hadoopcluster.ui.handler.HadoopClusterImportHandler"
+             id="org.talend.repository.hadoopcluster.importProvider"
+             name="Hadoop Cluster importer"
+             priority="NORMAL">
+          <repType
+                type="HADOOPCLUSTER"></repType>
+       </importProvider>
+    </extension>
 </plugin>
