--- a/org.talend.repository.hdfs/plugin.xml
+++ b/org.talend.repository.hdfs/plugin.xml
@@ -79,5 +79,17 @@
             version="5.3.0">
       </projecttask>
    </extension>
+   <extension
+         point="org.talend.repository.items.importexport.handler">
+      <importProvider
+            class="org.talend.repository.hdfs.ui.handler.HdfsImportHandler"
+            id="org.talend.repository.hdfs.importProvider"
+            name="HDFS importer"
+            priority="NORMAL">
+         <repType
+               type="HDFS">
+         </repType>
+      </importProvider>
+   </extension>
 
 </plugin>
