--- a/org.talend.repository.oozie/plugin.xml
+++ b/org.talend.repository.oozie/plugin.xml
@@ -59,5 +59,16 @@
             serviceId="IOozieService">
       </Service>
    </extension>
+   <extension
+         point="org.talend.repository.items.importexport.handler">
+      <importProvider
+            class="org.talend.repository.oozie.ui.handler.OzzieImportHandler"
+            id="org.talend.repository.oozie.importProvider"
+            name="Ozzie importer"
+            priority="NORMAL">
+         <repType
+               type="OOZIE"></repType>
+      </importProvider>
+   </extension>
 
 </plugin>
