TDI-26853: Improve the display of the tSqoopMerge component.
git-svn-id: http://talendforge.org/svn/tos/trunk@107202 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -3,19 +3,20 @@ LONG_NAME=It allows you to combine two datasets where entries in one dataset sho
 EXTERNAL.NAME=Sqoop Merge
 TEMPFILE.NAME=Temp data directory path
 
-CLASSNAME.NAME=Class Name
-JARFILE.NAME=Directory of jar file
-MERGEKEY.NAME=Merge Key
-NEWDATA.NAME=New data Directory
-ONTO.NAME=Old data Directory
-TARGETDIR.NAME=Target directory
-GENERATE.NAME=Need to Generate Jar File
-GENERATEJAR.NAME=Generate Jar Paramter 
+FOLDERS.NAME=Folders to merge
+CLASSNAME.NAME=Class name
+JARFILE.NAME=JAR file location
+MERGEKEY.NAME=Merge key
+NEWDATA.NAME=New data
+ONTO.NAME=Old data
+TARGETDIR.NAME=Target folder
+GENERATE.NAME=Generate the JAR file
+GENERATEJAR.NAME=JAR generation parameters 
 CONNECTION.NAME=Connection
-TABLE.NAME=Table Name
+TABLE.NAME=Table name
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
-PRINT_LOG.NAME=Print Log
+PRINT_LOG.NAME=Print logs
 VERBOSE.NAME=Verbose
 
 ADDITIONAL.NAME=Additional Arguments
@@ -39,7 +40,7 @@ ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 
-OUTPUT_MESSAGE.NAME=Output Message
+OUTPUT_MESSAGE.NAME=Output message
 
 
 GENERATE_JAR_ADDITIONAL_JAVA.NAME=Additional Arguments
