TDI-26862: Improve the display of the tHDFSCopy component.
git-svn-id: http://talendforge.org/svn/tos/trunk@107206 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -60,5 +60,5 @@ CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
-MERGE.NAME=Copy Merge
-MERGENAME.NAME=Merge Name
+MERGE.NAME=Merge the input files
+MERGENAME.NAME=Output file name
