--- a/org.talend.designer.components.bigdata/components/tELTHiveInput/tELTHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveInput/tELTHiveInput_messages.properties
@@ -4,5 +4,6 @@ LONG_NAME=Provides the table schema to be used in tELTHiveMap
 HELP=org.talend.help.tELTHiveInput
 
 ELT_TABLE_NAME.NAME=Default Table Name
+ELT_SCHEMA_NAME.NAME=Default Schema Name
 
 
