--- a/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -4,6 +4,7 @@ DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.OVERWRITE=OverWrite
 DATA_ACTION.NAME=Action on data
 ELT_TABLE_NAME.NAME=Default Table Name
+ELT_SCHEMA_NAME.NAME=Default Schema Name
 
 HELP=org.talend.help.tELTHiveOutput
 LONG_NAME=Executes an insert query from a select query built by tELTHiveMap
