TUP-758： enhance the extension point.
git-svn-id: http://talendforge.org/svn/tos/trunk@107359 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -131,12 +131,16 @@
    <extension
          point="org.talend.repository.items.importexport.handler">
       <importProvider
-            class="org.talend.repository.pigudf.handler.PigUdfImportHandler"
             id="org.talend.repository.pigudf.importProvider"
             name="Pig UDF importer"
             priority="NORMAL">
-         <repType
-               type="PIG_UDF"></repType>
+         <handler
+               class="org.talend.repository.pigudf.handler.PigUdfImportHandler">
+            <parameter
+                  name="type"
+                  value="PIG_UDF">
+            </parameter>
+         </handler>
       </importProvider>
    </extension>
 </plugin>
