TUP-758： enhance the extension point.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@107361 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -222,12 +222,16 @@
     <extension
           point="org.talend.repository.items.importexport.handler">
        <importProvider
-             class="org.talend.repository.hadoopcluster.ui.handler.HadoopClusterImportHandler"
              id="org.talend.repository.hadoopcluster.importProvider"
              name="Hadoop Cluster importer"
              priority="NORMAL">
-          <repType
-                type="HADOOPCLUSTER"></repType>
+          <handler
+                class="org.talend.repository.hadoopcluster.ui.handler.HadoopClusterImportHandler">
+             <parameter
+                   name="type"
+                   value="HADOOPCLUSTER">
+             </parameter>
+          </handler>
        </importProvider>
     </extension>
 </plugin>
