Fix Bug TDI-27289 : Differents issues on the RC/ORC file feature https://jira.talendforge.org/browse/TDI-27289
git-svn-id: http://talendforge.org/svn/tos/trunk@107449 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -125,3 +125,7 @@ ROW_FORMAT_GROUP.NAME=Row format
 
 CREATE_TABLE_GROUP.NAME=Create Table
 ADVANCED_CREATE_TABLE_GROUP.NAME=Advanced Create Table
+
+QUERY.NAME=Query
+
+DIE_ON_ERROR.NAME=Die on error
