--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -87,3 +87,5 @@ PARTITION.NAME=
 CREATE_IF_NOT_EXIST.NAME=Create partition if not exist
 
 LOAD_DATA_GROUP.NAME=Load Data
+
+DIE_ON_ERROR.NAME=Die on error
