Fixed New Feature TDI-26873: Create connectors for Google Storage https://jira.talendforge.org/browse/TDI-26873 Note: 1.Optimize components code 2. Modify wrong commit.
git-svn-id: http://talendforge.org/svn/tos/trunk@107558 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tGSDelete/tGSDelete_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tGSDelete/tGSDelete_messages.properties
@@ -12,7 +12,7 @@ CONNECTION.NAME=Component List
 CONNECTION_CONFIG.NAME=Connection
 DELETE_CONFIG.NAME=Delete configuration
 DELIMITER.NAME=Delimiter
-DEL_IN_ALL_BUCKETS.NAME=Delete in all buckets
+DEL_IN_LIST_BUCKETS.NAME=Delete object from  bucket list
 DIE_ON_ERROR.NAME=Die on error
 HELP=org.talend.help.tGSDelete
 LONG_NAME=Delete objects in the Google Storage bucket
