--- a/org.talend.designer.components.bigdata/components/tGSGet/tGSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tGSGet/tGSGet_messages.properties
@@ -18,7 +18,7 @@ KEYS.ITEM.BUCKET_NAME=Bucket name
 KEYS.ITEM.KEY=Key
 KEYS.ITEM.NEW_NAME=New name
 KEYS.NAME=Keys
-GETLIST.NAME=Get files of all buckets
+GETLIST.NAME=Get files from bucket list
 LONG_NAME=Get the file in the Google Storage bucket
 NB_LINE.NAME=Number of line
 OBJECTS_PREFIX.NAME=Key prefix
