--- a/org.talend.designer.components.bigdata/components/tGSList/tGSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tGSList/tGSList_messages.properties
@@ -15,7 +15,7 @@ CURRENT_KEY.NAME=Current key
 DELIMITER.NAME=Delimiter
 DIE_ON_ERROR.NAME=Die on erro
 HELP=org.talend.help.tGSList
-LISTALL.NAME=List all buckets objects
+LIST_IN_BUCKET_LIST.NAME=List objects in bucket list
 LONG_NAME=List the object in the Google Storage bucket
 OBJECTS_PREFIX.NAME=Key prefix
 PREFIX.NAME=Prefix
