TUP-758: refactor the extension point.
git-svn-id: http://talendforge.org/svn/tos/trunk@107587 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -130,17 +130,17 @@
    </extension>
    <extension
          point="org.talend.repository.items.importexport.handler">
-      <importProvider
+      <importItemsProvider
             id="org.talend.repository.pigudf.importProvider"
             name="Pig UDF importer"
             priority="NORMAL">
-         <handler
+         <importItemsHandler
                class="org.talend.repository.pigudf.handler.PigUdfImportHandler">
             <parameter
                   name="type"
                   value="PIG_UDF">
             </parameter>
-         </handler>
-      </importProvider>
+         </importItemsHandler>
+      </importItemsProvider>
    </extension>
 </plugin>
