TUP-758: refactor the extension point.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@107589 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -221,17 +221,17 @@
     </extension>
     <extension
           point="org.talend.repository.items.importexport.handler">
-       <importProvider
+       <importItemsProvider
              id="org.talend.repository.hadoopcluster.importProvider"
              name="Hadoop Cluster importer"
              priority="NORMAL">
-          <handler
+          <importItemsHandler
                 class="org.talend.repository.hadoopcluster.ui.handler.HadoopClusterImportHandler">
              <parameter
                    name="type"
                    value="HADOOPCLUSTER">
              </parameter>
-          </handler>
-       </importProvider>
+          </importItemsHandler>
+       </importItemsProvider>
     </extension>
 </plugin>
