--- a/org.talend.repository.hcatalog/plugin.xml
+++ b/org.talend.repository.hcatalog/plugin.xml
@@ -81,18 +81,18 @@
    </extension>
    <extension
          point="org.talend.repository.items.importexport.handler">
-      <importProvider
+      <importItemsProvider
             id="org.talend.repository.hcatalog.importProvider"
             name="HCatalog importer"
             priority="NORMAL">
-         <handler
+         <importItemsHandler
                class="org.talend.repository.hcatalog.ui.handler.HCatalogImportHandler">
             <parameter
                   name="type"
                   value="HCATALOG">
             </parameter>
-         </handler>
-      </importProvider>
+         </importItemsHandler>
+      </importItemsProvider>
    </extension>
 
 </plugin>
