TUP-1009: refactor the relationship builder.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@107774 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -234,4 +234,12 @@
           </importItemsHandler>
        </importItemsProvider>
     </extension>
+    <extension
+          point="org.talend.core.runtime.itemRelationship">
+       <parameterHandler
+             class="org.talend.repository.hadoopcluster.handlers.HadoopClusterPropertyTypeParameterRelationshipHandler"
+             id="org.talend.repository.hadoopcluster.parameterHandler.propertyType"
+             name="Property Type (Hadoop Cluster)">
+       </parameterHandler>
+    </extension>
 </plugin>
