Fix Feature TDI-24892 : Support for the new Hadoop version: EMC Pivotal in 5.4 https://jira.talendforge.org/browse/TDI-24892
git-svn-id: http://talendforge.org/svn/tos/trunk@107803 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -20,6 +20,7 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -32,5 +33,6 @@ HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
+HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
