--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -68,3 +68,6 @@ FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.EMPTY=
 FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.BINARY_COMPARATOR=Binary Comparator
 FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.REGEX_STRING_COMPARATOR=Regex String Comparator
 FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.SUBSTRING_COMPARATOR=Subtring comparator
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
