--- a/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -13,6 +13,7 @@ DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
@@ -26,6 +27,7 @@ DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 
