--- a/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
@@ -54,3 +54,6 @@ NAMENODE_PRINCIPAL.NAME=Namenode principal
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
