--- a/org.talend.designer.components.bigdata/components/tHDFSRowCount/tHDFSRowCount_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSRowCount/tHDFSRowCount_messages.properties
@@ -59,3 +59,6 @@ COMPRESSION.ITEM.BZIP2=BZIP2
 COMPRESSION_GROUP.NAME=Compression
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
