--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -89,3 +89,10 @@ CREATE_IF_NOT_EXIST.NAME=Create partition if not exist
 LOAD_DATA_GROUP.NAME=Load Data
 
 DIE_ON_ERROR.NAME=Die on error
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+HIVE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+USE_YARN.NAME=Use Yarn
+SET_RESOURCE_MANAGER.NAME=Set Resource Manager
+RESOURCE_MANAGER.NAME=
+CLASSPATH_SEPARATOR.NAME=Path separator in server
