--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -84,3 +84,10 @@ REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+HIVE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+USE_YARN.NAME=Use Yarn
+SET_RESOURCE_MANAGER.NAME=Set Resource Manager
+RESOURCE_MANAGER.NAME=
+CLASSPATH_SEPARATOR.NAME=Path separator in server
