--- a/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -75,3 +75,6 @@ HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
