--- a/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -62,3 +62,6 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 MERGE.NAME=Merge the input files
 MERGENAME.NAME=Output file name
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
