--- a/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -63,3 +63,6 @@ CONN.NAME=Connection
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 INCLUDSUBDIR.NAME=Includes subdirectories
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
