--- a/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -78,3 +78,6 @@ NB_FILE.NAME=Number of files
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
