--- a/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
@@ -51,3 +51,6 @@ MD5.NAME=Get file checksum
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
