--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -129,3 +129,10 @@ ADVANCED_CREATE_TABLE_GROUP.NAME=Advanced Create Table
 QUERY.NAME=Query
 
 DIE_ON_ERROR.NAME=Die on error
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+HIVE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+USE_YARN.NAME=Use Yarn
+SET_RESOURCE_MANAGER.NAME=Set Resource Manager
+RESOURCE_MANAGER.NAME=
+CLASSPATH_SEPARATOR.NAME=Path separator in server
