--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -16,6 +16,7 @@ DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -30,6 +31,7 @@ PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
+PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
@@ -121,3 +123,8 @@ KEYCOLUMN.NAME=Key Column
 VALUECOLUMN.NAME=Value Column
 SEQUENCE_CONFIGURATION.NAME = Sequence Loader Configuration
 
+USE_YARN.NAME=Use Yarn
+RESOURCE_MANAGER.NAME=Resource Manager
+SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
+JOBHISTORY_ADDRESS.NAME=
+CLASSPATH_SEPARATOR.NAME=Path separator in server
