--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -70,6 +70,7 @@ DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 
 HBASE_VERSION.NAME=Version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -83,6 +84,7 @@ HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
+HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 
 CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
