--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -124,3 +124,8 @@ SPEED_PARALLEL.NAME=Connector specific configuration
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+USE_YARN.NAME=Use Yarn
+RESOURCE_MANAGER.NAME=Resource Manager
