--- a/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -17,5 +17,7 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.3
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.2
+DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
+DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X
+DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X
+DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X
