Fix New Feature TDI-26981 : Cassandra - Support bulk upload https://jira.talendforge.org/browse/TDI-26981 support cassandra 2.0.0 for all cassandra components
git-svn-id: http://talendforge.org/svn/tos/trunk@108069 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -64,3 +64,4 @@ USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
