--- a/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
@@ -14,3 +14,4 @@ USERNAME.NAME=Username
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
