Fix Feature TDI-27356 : Support for MapR 2.1.3 https://jira.talendforge.org/browse/TDI-27356
git-svn-id: http://talendforge.org/svn/tos/trunk@108104 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -45,7 +45,7 @@ ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
 HBASE_TABLE.NAME=Table name
 MAPPING.NAME=Mapping
 MAPPING.ITEM.COLUMN=Column
-MAPPING.ITEM.FAMILY_COLUMN=Column family(no need to set it when only treat the column as row key)
+MAPPING.ITEM.FAMILY_COLUMN=Column family and name(no need to set it when only treat the column as row key)
 
 HBASESTORAGE_PARAMETER.NAME=HBaseStorage Configuration
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME=NAME
@@ -81,6 +81,7 @@ HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR1=MapR 1.2.0
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
+HBASE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
