--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -35,6 +35,7 @@ HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
+HBASE_VERSION.ITEM.MAPR213=MapR 2.1.3
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
