--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -45,6 +45,7 @@ HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HIVE_VERSION.ITEM.MAPR212=MapR 2.1.2
+HIVE_VERSION.ITEM.MAPR213=MapR 2.1.3
 HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8
