--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -27,6 +27,7 @@ PIG_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 PIG_VERSION.ITEM.MAPR1=MapR 1.2.0
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
+PIG_VERSION.ITEM.MAPR213=MapR 2.1.3
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
@@ -102,7 +103,7 @@ ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
 HBASE_TABLE.NAME=Table name
 MAPPING.NAME=Mapping
 MAPPING.ITEM.COLUMN=Column
-MAPPING.ITEM.FAMILY_COLUMN=Column family(no need to set it for hbase row key)
+MAPPING.ITEM.FAMILY_COLUMN=Column family and name(no need to set it for hbase row key)
 
 HBASESTORAGE_PARAMETER.NAME=HBaseStorage Configuration
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME=NAME
