--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -90,6 +90,7 @@ DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Sqoop 1.3)
 DB_VERSION.ITEM.MAPR2=MapR 2.0.0 (Sqoop 1.4)
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
+DB_VERSION.ITEM.MAPR213=MapR 2.1.3 (Sqoop 1.4.2)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
@@ -123,3 +124,4 @@ DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
+CLASSPATH_SEPARATOR.NAME=Path separator in server
