--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -43,6 +43,7 @@ ROW_KEY_TYPE.ITEM.BYTE_ARRAY=byte[]
 ROW_KEY_TYPE.ITEM.BOOLEAN=Boolean
 ROW_KEY_TYPE.ITEM.OBJECT=Object
 ROW_KEY_TYPE.ITEM.SHORT=Short
+ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
 SPECIFY_KEYS.NAME=Specify row keys
 SPECIFY_COLUMNS.NAME=Specify columns
 SUPER_COLUMN_TYPE.NAME=Super column type
@@ -65,3 +66,18 @@ DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+ROW_KEY_C_TYPE.NAME=Row key Cassandra type
+ROW_KEY_C_TYPE.ITEM.DEFAULT=Default
+ROW_KEY_C_TYPE.ITEM.COUNTERCOLUMNTYPE=CounterColumn
+ROW_KEY_C_TYPE.ITEM.INTEGERTYPE=Integer
+ROW_KEY_C_TYPE.ITEM.ASCIITYPE=Ascii
+ROW_KEY_C_TYPE.ITEM.UUIDTYPE=UUID
+ROW_KEY_C_TYPE.ITEM.TIMEUUIDTYPE=TimeUUID
+SUPER_COLUMN_C_TYPE.NAME=Super column Cassandra type
+SUPER_COLUMN_C_TYPE.ITEM.DEFAULT=Default
+SUPER_COLUMN_C_TYPE.ITEM.COUNTERCOLUMNTYPE=CounterColumn
+SUPER_COLUMN_C_TYPE.ITEM.INTEGERTYPE=Integer
+SUPER_COLUMN_C_TYPE.ITEM.ASCIITYPE=Ascii
+SUPER_COLUMN_C_TYPE.ITEM.UUIDTYPE=UUID
+SUPER_COLUMN_C_TYPE.ITEM.TIMEUUIDTYPE=TimeUUID
+
