TDI-25944: Support specific keytab on HDFS, Pig, HCatalog and add full support of the security on Sqoop.
git-svn-id: http://talendforge.org/svn/tos/trunk@108255 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages.properties
@@ -17,9 +17,14 @@ HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
 TEMPLETON_PORT.NAME=Templeton port
+
 USE_KRB.NAME=Use kerberos authentication
 KRB_PRINC.NAME=Templeton principal
 KRB_REALM.NAME=Realm
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 DROP_CONFIGURATION.NAME=Drop Configuration
