--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -20,6 +20,10 @@ USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 KRB_PRINC.NAME=Templeton principal
 KRB_REALM.NAME=Realm
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 FILENAME.NAME=File name
