--- a/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
@@ -51,6 +51,10 @@ CURRENT_STATUS.NAME=Current Status
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 CONN.NAME=Connection
 
