--- a/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -45,6 +45,10 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 DIRECTORY.NAME=HDFS Directory
 CASE_SENSITIVE.NAME=Case Sensitive
