--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -29,7 +29,6 @@ DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 DB_VERSION.ITEM.MAPR1=MapR 1.2.0
 DB_VERSION.ITEM.MAPR2=MapR 2.0.0
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2
-DB_VERSION.ITEM.MAPR213=MapR 2.1.3
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
@@ -54,6 +53,10 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 CONN.NAME=Connection
 
