--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -84,6 +84,10 @@ PARTITION_FILTER.ITEM.PART_VALUE=Partition value
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
