--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -122,6 +122,14 @@ DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
 
+USE_KRB.NAME=Use kerberos authentication
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
+
 CONFIGURATION.NAME=Configuration
 
 USE_SPEED_PARALLEL.NAME=Use speed parallel data transfers
