--- a/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -21,6 +21,10 @@ USE_KRB.NAME=Use kerberos authentication
 KRB_PRINC.NAME=Templeton principal
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 KRB_REALM.NAME=Realm
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
