--- a/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -47,6 +47,10 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 COMPARISON_MODE.ITEM.BINARY_CMP=Compare in binary mode
 COMPARISON_MODE.ITEM.TEXT_CMP=Compare in text mode
