--- a/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -48,5 +48,9 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
