--- a/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
@@ -59,6 +59,10 @@ APPEND.NAME=Append
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 CONN.NAME=Connection
 
