--- a/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
@@ -51,6 +51,10 @@ USE_EXISTING_CONNECTION.NAME=Use an existing connection
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
+AUTHENTICATION.NAME=Authentication
 
 CURRENT_STATUS.NAME=Current Status
 
